fix: navigate bar z-index and image scroll into view

--- a/src/components/Tabs/style.scss
+++ b/src/components/Tabs/style.scss
@@ -3,6 +3,7 @@
     background-color: $gray-tab;
     align-items: center;
     text-align: center;
+    z-index: 99;
     .tab .icon{
         font-size: 44px;
         padding: 6px;
